Remove Logger